RESOLVED FIXED147557
Fix the all-in-one build on Linux after r187659
https://bugs.webkit.org/show_bug.cgi?id=147557
Summary Fix the all-in-one build on Linux after r187659
Csaba Osztrogonác
Reported 2015-08-03 04:11:27 PDT
http://trac.webkit.org/changeset/187659 broke the all-in-one build on Linux. The problem is adding MediaFeatureNames.cpp to CSSAllInOne.cpp: In file included from ../../Source/WebCore/css/CSSAllInOne.cpp:95: ../../Source/WebCore/css/MediaFeatureNames.cpp:35:1594: error: redefinition of 'max_color_indexMediaFeature' with a different type: 'void *[1]' vs 'const WTF::AtomicString' ../../Source/WebCore/css/MediaFeatureNames.h:86:886: note: previous definition is here extern const AtomicString any_hoverMediaFeature; extern const AtomicString any_pointerMediaFeature; extern const AtomicString colorMediaFeature; extern const AtomicString color_indexMediaFeature; extern const AtomicString gridMediaFeature; extern const AtomicString monochromeMediaFeature; extern const AtomicString heightMediaFeature; extern const AtomicString hoverMediaFeature; extern const AtomicString widthMediaFeature; extern const AtomicString orientationMediaFeature; extern const AtomicString aspect_ratioMediaFeature; extern const AtomicString device_aspect_ratioMediaFeature; extern const AtomicString device_pixel_ratioMediaFeature; extern const AtomicString device_heightMediaFeature; extern const AtomicString device_widthMediaFeature; extern const AtomicString inverted_colorsMediaFeature; extern const AtomicString max_colorMediaFeature; extern const AtomicString max_color_indexMediaFeature; extern const AtomicString max_aspect_ratioMediaFeature; extern const AtomicString max_device_aspect_ratioMediaFeature; extern const AtomicString max_device_pixel_ratioMediaFeature; extern const AtomicString max_device_heightMediaFeature; extern const AtomicString max_device_widthMediaFeature; extern const AtomicString max_heightMediaFeature; extern const AtomicString max_monochromeMediaFeature; extern const AtomicString max_widthMediaFeature; extern const AtomicString max_resolutionMediaFeature; extern const AtomicString min_colorMediaFeature; extern const AtomicString min_color_indexMediaFeature; extern const AtomicString min_aspect_ratioMediaFeature; extern const AtomicString min_device_aspect_ratioMediaFeature; extern const AtomicString min_device_pixel_ratioMediaFeature; extern const AtomicString min_device_heightMediaFeature; extern const AtomicString min_device_widthMediaFeature; extern const AtomicString min_heightMediaFeature; extern const AtomicString min_monochromeMediaFeature; extern const AtomicString min_widthMediaFeature; extern const AtomicString min_resolutionMediaFeature; extern const AtomicString pointerMediaFeature; extern const AtomicString resolutionMediaFeature; extern const AtomicString transform_2dMediaFeature; extern const AtomicString transform_3dMediaFeature; extern const AtomicString transitionMediaFeature; extern const AtomicString animationMediaFeature; extern const AtomicString video_playable_inlineMediaFeature; extern const AtomicString view_modeMediaFeature;
Attachments
Patch (7.01 KB, patch)
2015-08-03 04:23 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-08-03 04:15:56 PDT
MediaFeatureNames.cpp is included in MediaAllInOne.cpp too. How come it didn't cause build failure on Windows? But not the duplicated include causes this build failure.
Csaba Osztrogonác
Comment 2 2015-08-03 04:18:33 PDT
(In reply to comment #1) > MediaFeatureNames.cpp is included in MediaAllInOne.cpp too. > How come it didn't cause build failure on Windows? Ah, MediaAllInOne.cpp isn't included in Windows build at all.
Csaba Osztrogonác
Comment 3 2015-08-03 04:23:58 PDT
Csaba Osztrogonác
Comment 4 2015-08-03 04:29:03 PDT
Just a note: r187659 added all files in MediaAllInOne.cpp to CSSAllInOne.cpp, that's why we can remove MediaAllInOne.cpp instead of adding to the all-in-one build.
WebKit Commit Bot
Comment 5 2015-08-03 23:44:31 PDT
Comment on attachment 258053 [details] Patch Clearing flags on attachment: 258053 Committed r187816: <http://trac.webkit.org/changeset/187816>
WebKit Commit Bot
Comment 6 2015-08-03 23:44:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.