Fix the all-in-one build on Linux after r187659 https://bugs.webkit.org/show_bug.cgi?id=147557

Reviewed by Alex Christensen.

Removed MediaFeatureNames.cpp from the all-in-one build, because it caused build failures on Linux.
Additionally removed css/MediaAllInOne.cpp since it is unused.

* WebCore.vcxproj/WebCore.vcxproj:
* WebCore.vcxproj/WebCore.vcxproj.filters:
* css/CSSAllInOne.cpp:
* css/MediaAllInOne.cpp: Removed.


Canonical link: https://commits.webkit.org/165679@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187816 268f45cc-cd09-0410-ab3c-d52691b4dbfc